# Civil-Auto-Workspace

./: .gitignore  README.md  config.yaml  handwrite_config.json  main.py  pyproject.toml  requirements.txt  run.bat  如何同步到Github.md  运行.bat  运行主程序.bat  运行主程序.bat - 快捷方式.lnk  运行表格排版.bat
00_使用手册/: MEMORY.md  feedback_toolbox_architecture.md  project_context.md  开发环境配置手册.md  检测辅助工具开发与重构原则总纲.md  检测辅助工具开发原则.md
02_Core/: auto_filler.py  auto_filler_core.py  body_format.py  bracket_format.py  config_editor.py  curve_template_editor.py  file_utils_backup.py  fix_cross_ref.py  main.py  pdf_coordinate_picker.py  plot_curves.py  renumber_photos.py  sort_photos.py  table_format.py  tempCodeRunnerFile.py  text.py  ui_components.py  word2pdf.py  word_env_utils.py  坐标拾取工具.py
02_Core/common/: excel_helpers.py  file_utils.py  help_tooltip.py  io_helpers.py  patterns.py  plot_helpers.py  types.py  ui_helpers.py  word_com.py  word_helpers.py
03_doc/: ~$报告-小米智能制造产业基地项目（二局-3号厂房）施工质量评价-0181.docx  鉴定报告-小米智能制造产业基地项目（二局-报交车间）施工质量评价-0183.docx
04_Config/: report_style_config.json
06_Report_Template/: 00_主模板.docx  01_钢筋间距.docx
98_各种使用手册/: Github常用指令.md  Python 极速运行环境配置 (基于 uv).md  VS Code 核心插件与 Python 常用第三方库的基础配置手册.md  bat_py_vs三者关系.md  python语法与使用指南.md  使用uv pip安装新库.md  如何同步到Github.md
99_old_JSA/: 交叉引用固定格式.js  手写字体表格版.js  文字文档表格排版.js  防火截面快速生成.js
scripts/: init_layout.py  setup_env.bat
src/civil_auto/: main.py
src/civil_auto/config/: loader.py
src/civil_auto/core/: auto_filler_core.py  body_format.py  bracket_normalize.py  coord_picker.py  (+6 more)
tests/: test_cross_ref_fix.py
(+12 files in other folders)
