[project]
name = "civil-auto-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "et-xmlfile==2.0.0",
    "handright==8.2.0",
    "lxml==6.1.0",
    "numpy==2.4.4",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pandas==3.0.2",
    "pillow==10.4.0",
    "pip==25.0.1",
    "pymupdf==1.27.2.2",
    "pypdf==6.9.2",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "pywin32==311",
    "six==1.17.0",
    "typing-extensions==4.15.0",
    "tzdata==2026.1",
]
[tool.pyright]
# 必须显式写出 Pylance 期待的几个名字，它才会停止报 missingDefaultExcludes
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.venv",        # 必须显式加上这一行
    "**/.*",           # 涵盖其他隐藏文件夹
    "temp",            # 结尾记得加逗号
    "out"              # 结尾记得加逗号
]

executionEnvironments = [
  { root = "." }
]